# survey

./: agent.py  requirements.txt
PgaSurvey (12)/: Pasted--1-1-SPA-HTML5-CSS3--1727783746206.txt  Pasted--svg-xmlns-http-www-w3-org-2000-svg-viewBox-0-0-600-400-rect-width-600-he-1727786771840.txt  Pasted--svg-xmlns-http-www-w3-org-2000-svg-viewBox-0-0-800-600-rect-width-800-he-1727785521100.txt  Pasted--svg-xmlns-http-www-w3-org-2000-svg-viewBox-0-0-800-600-rect-width-800-he-1727786594453.txt  Pasted-INFO-werkzeug-172-31-196-35-03-Oct-2024-07-00-07-POST-continue-analysis-HTTP-1-1-200-INFO-1727938900159.txt  app.py  pyproject.toml  replit_zip_error_log.txt  test_agent_functions.py
PgaSurvey (12)/static/css/: collected_data.css  main.css  modal.css  survey.css
PgaSurvey (12)/static/js/: dataCollection.js  main.js  modal.js  pagination.js  researchPlan.js  survey.js  tabs.js  utils.js
PgaSurvey (12)/templates/: header.html  index.html  survey.html
static/css/: common.css  styles.css
static/js/: conclusions.js  config.js  dom.js  keyAspects.js  state.js
templates/: survey_content.html
