[tool.poetry]
name = "repl-nix-dynamiclandingpage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
langgraph = "^0.0.17"
langchain-anthropic = "^0.1.4"
langchain-core = "^0.1.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
